# django-deep

./: pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py
