[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-deep"
version = "0.1.0"
description = "Django Enhanced Expression Parser"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
  { name = "Octolo", email = "dev@octolo.tech" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Django",
  "Framework :: Django :: 5.0",
]
keywords = ["django", "parser", "expression", "deep"]
dependencies = ["Django>=5.0,<6.0"]

[tool.setuptools.dynamic]
version = { attr = "django_deep.__version__" }

[project.urls]
"Homepage" = "https://github.com/hicinformatic/django-deep"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-django",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
pythonpath = ["src"]
